Closed Bug 27043 Opened 25 years ago Closed 25 years ago

CSS top&bottom margins not showing when nested inside a table

Categories

(Core :: Layout, defect, P3)

x86
All
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: holi, Assigned: troy)

References

()

Details

Attachments

(1 file)

I've made a test (see URL) where a DIV with the margin attribute, nested inside a table, doesn't display neither top nor bottom margins (right and left seem to display correctly). The second example on the test shows the same DIV nested inside another DIV instead, in which case the margins are displayed correctly.
Fixed
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
QA Contact: petersen → chrisd
Using 2/17 build with simple testcase, verifying bug fixed.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: