b=27043 r=buster@netscape.com Inner table cell specifies NS_BLOCK_MARGIN_ROOT flag now